fixed text wrapping

--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -42,7 +42,7 @@
 }
 
 .friendMessageText {
-
+    white-space: pre-wrap;
 }
 
 .friendTime {
