--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -36,8 +36,7 @@
     box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
     max-width: 500px;
     min-width: 200px;
-    /*word-wrap: break-word;*/
-    /*grid-area: text;*/
+
 }
 
 .text:after {
@@ -54,7 +53,7 @@
 }
 
 .messageText {
-
+    white-space: pre-wrap;
 }
 
 .time {
